fix: Adjust alignment of branding for mobile and avoid restart from affecting alignment

--- a/src/termynal.css
+++ b/src/termynal.css
@@ -130,6 +130,11 @@ a[data-terminal-control] {
   color: var(--color-terminal-control-text);
 }
 
+[data-terminal-branding] {
+  display: flex;
+  align-items: center;
+}
+
 [data-terminal-branding] a {
   color: var(--color-terminal-control-text);
   font-size: 10px;
